--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>flexbox</title>
-        <link rel="stylesheet" href="css/normalaize.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" href="assets/css/normalaize.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -12,15 +12,15 @@
             <div class="header">
                 <div class="logo">
                     <div class="logo-img">
-                        <img src="img/logo.png" alt="logo-img">
+                        <img src="assets/img/logo.png" alt="logo-img">
                         <p class="name-logo">уличный университет</p>
                     </div>
                 </div>
                 <button class="arrow slider-left">
-                    <img src="img/arrow-left.png" alt="arrow-left">
+                    <img src="assets/img/arrow-left.png" alt="arrow-left">
                 </button>
                 <button class="arrow slider-right">
-                    <img src="img/arrow-right.png" alt="arrow-right">
+                    <img src="assets/img/arrow-right.png" alt="arrow-right">
                 </button>
             </div>
             <nav class="nav-header">
@@ -91,3 +91,4 @@
             </section>
         </main>
     </body>
+</html>
